I fixed the scrollbar for chrome.

--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -3,6 +3,7 @@
 :root {
   --gap-double: calc(var(--gap-standard) * 2);
   --gap-half: calc(var(--gap-standard) / 2);
+  --gap-quarter: calc(var(--gap-standard) / 4);
   --gap-standard: 1.3rem;
   --theme-grey-dark: #242525;
   --theme-grey-light: #363838;
@@ -16,6 +17,30 @@
 }
 
 /* PSUEDO ELEMENTS __________________________________________________________________________________ */
+
+::-webkit-scrollbar {
+  height: var(--gap-standard);
+  width: var(--gap-standard);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--theme-grey-dark);
+  border: var(--gap-quarter) solid var(--theme-grey-light);
+  border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--theme-orange-logo);
+}
+
+::-webkit-scrollbar-thumb:active { /* This is not in alphabetical order because it hase to appear below hover, or else only the hover effect will dispaly. */
+  background-color: var(--theme-teal-logo);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--theme-grey-light);
+  margin: calc(var(--gap-half) - var(--gap-quarter));
+}
 
 
 /* TAGS _____________________________________________________________________________________________ */
@@ -41,6 +66,7 @@ body {
   min-height: 100svh;
   min-width: 100vw;
   min-width: 100svw;
+  overflow-x: hidden;
 }
 
 code {
